# maintainers_copilot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: eval.yml
app/: model_loader.py
app/api/: auth_backend.py  main.py
app/api/routers/: auth.py  chat.py  conversations.py  rag.py  widget..py
app/db/: models.py  session.py  user_db.py  user_manager.py
app/db/alembic/: env.py
app/db/alembic/versions/: 4bdd58dbb24e_add_users_table.py  fcc2fe893345_initial_schema.py
app/domain/: rag.py  users.py
app/infra/: redis_client.py  vault.py
app/repositories/: audit_repository.py  memory_repository.py  rag_repository.py  widget_repository.py
app/services/: chat_service.py  rag_service.py
frontend/chatbot/: app.py
frontend/widget/: .env.example  QUICKSTART.md  README.md  deploy.sh  example-integration.html  index.html  package-lock.json  package.json  test.html  verify-setup.sh  vite.config.js
frontend/widget/public/: widget-loader.js
frontend/widget/src/: widget.jsx
frontend/widget/src/components/: ChatMessage.jsx  ChatbotWidget.jsx
frontend/widget/src/styles/: chatbot.css  widget.css
golden/rag/: golden.jsonl.bak
models/classifier/: config.json
reports/: classical_baseline_report.json  llm_baseline_report_groq.json  roberta_baseline_report.json
scripts/: build_rag_corpus.py  classical_baseline.py  download_issues.py  ingest_to_pgvector.py  llm_baseline.py  process_issues.py
tests/: test_api.py
