[project]
name = "maintainers-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "google-genai>=2.5.0",
    "groq>=1.2.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.13.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
]
