[project]
name = "maintainers-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "google-genai>=2.5.0",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "hvac>=2.4.0",
    "numpy>=2.4.6",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "uvicorn>=0.47.0",
]
